<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_photo_camera_black_24dp"
            android:title="@string/title_import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/title_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_video_library_black_24dp"
            android:title="@string/title_slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/title_tools" />
    </group>

    <item android:title="@string/title_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/title_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/title_send" />
        </menu>
    </item>
</menu>